src/objects/FSTR__PCE_Approval_Item__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Approval_Note__c</fullName>
        <label>Approval Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Approval__c</fullName>
        <label>Approval</label>
        <referenceTo>FSTR__PCE_Approval__c</referenceTo>
        <relationshipLabel>Approval Items</relationshipLabel>
        <relationshipName>PCE_Approval_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSTR__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PCE_Approval_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipLabel>Approval Items</relationshipLabel>
        <relationshipName>PCE_Approval_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__IsCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCanceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__IsRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__IsRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Step_Approval_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Approval Item</label>
        <referenceTo>FSTR__PCE_Step_Approval_Item__c</referenceTo>
        <relationshipLabel>Approval Items</relationshipLabel>
        <relationshipName>PCE_Approval_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Task</label>
        <referenceTo>FSTR__Process_Task__c</referenceTo>
        <relationshipLabel>Approval Items</relationshipLabel>
        <relationshipName>Approval_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>